--- a/style.css
+++ b/style.css
@@ -68,7 +68,7 @@ input:active {
 ::-webkit-calendar-picker-indicator {
   width: 20px;
   height: 20px;
-  background-image: url(/data.png);
+  background-image: url(/img/data.png);
 }
 
 /* Header start */
@@ -117,6 +117,21 @@ input:active {
   display: flex;
   align-items: center;
 }
+/* поиск */
+.header__search-glass:hover > .headaer__input-glass {
+  width: 200px;
+  color: white;
+}
+.headaer__input-glass {
+  transition: 0.8s;
+  line-height: 40px;
+  width: 0px;
+  background-color: rgba(255, 255, 255, 0.317);
+  border-radius: 5vh;
+  text-align: center;
+  padding: 0;
+  color: white;
+}
 .hearder__glass {
   margin-right: 32px;
 }
@@ -127,7 +142,9 @@ input:active {
   margin-right: 4px;
   color: #ffffff;
 }
-.hearder__outline {
+.header__button-glass {
+  border: 0;
+  background-color: #00000000;
 }
 /* Header end */
 
@@ -324,7 +341,6 @@ input:active {
   font-weight: 700;
   font-size: 18px;
   line-height: 24px;
-  color: #ffffff;
   border: 0;
   background: #34a0a4;
   border-radius: 64px;
@@ -336,6 +352,9 @@ input:active {
   width: 143px;
   min-height: 44px;
   padding: 0;
+}
+.events__button a {
+  color: #ffffff;
 }
 .events__button:hover,
 .events__button:focus,
@@ -367,7 +386,6 @@ input:active {
   font-weight: 700;
   font-size: 18px;
   line-height: 24px;
-  color: #34a0a4;
   width: 178px;
   min-height: 56px;
   border: 0;
@@ -376,6 +394,9 @@ input:active {
   box-shadow: 0px 89px 35px rgba(0, 0, 0, 0.01),
     0px 50px 30px rgba(0, 0, 0, 0.05), 0px 22px 22px rgba(0, 0, 0, 0.09),
     0px 6px 12px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
+}
+.reserve__button a {
+  color: #34a0a4;
 }
 .reserve__button:hover,
 .reserve__button:focus,
